training_output/pnet_training_job_2357354.txt
  File "scripts/pnet_train_loop.py", line 85
    del Xbatch
    ^
SyntaxError: invalid syntax
